# cmr_localization

./: .gitignore  .gitlab-ci.yml  README.md  cmr_localization_kinetic.rosinstall
cmr_cnn_classifier/: CMakeLists.txt  README.md  package.xml
cmr_cnn_classifier/launch/: in_out_classifier.launch
cmr_cnn_classifier/scripts/: in_out_classifier.py  in_out_classifier_node.py
cmr_localization/: CMakeLists.txt  README.md  package.xml
cmr_localization/cfg/: rtabmap_common.yaml  rtabmap_long_range.yaml  rtabmap_short_range.yaml
cmr_localization/launch/: amcl_basic.launch  gmapping_basic.launch  localization.launch  mapping.launch  rtabmap.launch  rtabmap_offline.launch
cmr_localization/launch/starters/: localization_s.launch
cmr_localization/maps/metric/: cmg_imes_flur.pgm  cmg_imes_flur.yaml  cmg_imes_flur_edit.pgm  cmg_imes_flur_edit.yaml
cmr_localization/maps/topological/: cmg_imes_flur_tm.json  cmg_imes_flur_tm.yaml
cmr_localization/scripts/: filterTF.py  generate_db_name.py  install_dependencies.sh  republish_tf_static.py
cmr_localization/test/: get_bag.sh  rtabmap.test  test_rtabmap.cpp
map_manager/: CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
map_manager/include/automated_sm_mapping/: automated_sm_mapping.h
map_manager/include/environment_detector/: environment_detector.h
map_manager/include/nodelets/: register_velodyne.h
map_manager/include/sm_mapping/: sm_mapping.h
map_manager/launch/: record_bag.launch
map_manager/src/: automated_sm_mapping.cpp  environment_detector.cpp  graphoptimizer.cpp  register_velodyne.cpp  sm_mapping.cpp
map_manager/src/nodelets/: img_compressed_to_raw.cpp  register_velodyne.cpp
