<?xml version="1.0"?>
<package format="2">
  <name>cmr_cnn_classifier</name>
   <version>0.0.0</version>
  <description>The cmr_CNNclassifier package</description>
  <maintainer email="Marvin.Stuede@imes.uni-hannover.de">Marvin Stüde</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>tf</depend>
  <depend>roslib</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>nav_msgs</depend>
  <depend>python-scipy</depend>
</package>
