<?xml version="1.0"?>
<package format="2">
  <name>cmr_localization</name>
  <version>0.1.0</version>
  <description>The cmr_localization package</description>

  <maintainer email="Marvin.Stuede@imes.uni-hannover.de">Marvin Stuede</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>timed_roslaunch</exec_depend>

  <export>

  </export>
</package>
